# eppo-multiplatform

./: .gitignore  README.md  package-lock.json  package.json
.changeset/: calm-pumas-retire.md  calm-starfishes-march.md  chatty-books-count.md  chilly-pandas-smile.md  chilly-rings-wave.md  clever-ties-tie.md  config.json  cool-points-care.md  cuddly-houses-share.md  cuddly-humans-build.md  cuddly-turtles-develop.md  curly-houses-provide.md  curvy-teachers-double.md  cyan-socks-fold.md  dull-toes-drop.md  early-camels-tease.md  eighty-walls-turn.md  empty-news-add.md  five-laws-do.md  fluffy-cameras-help.md  fluffy-kings-sniff.md  four-pumas-tell.md  fuzzy-owls-destroy.md  giant-clubs-jump.md  giant-eyes-tie.md  happy-zoos-greet.md  hip-goats-camp.md  khaki-hairs-leave.md  kind-flowers-relate.md  lazy-hats-battle.md  lemon-baboons-fail.md  light-socks-wait.md  long-wasps-film.md  loud-lions-confess.md  loud-parents-leave.md  major-candles-mate.md  metal-clocks-battle.md  moody-lions-approve.md  neat-ghosts-press.md  nervous-frogs-visit.md  (+25 more)
.github/: dependabot.yml
.github/workflows/: android.yml  ci.yml  dart.yml  elixir.yml  msrv.yml  publish.yml  python.yml  ruby-release.yml  ruby.yml  version.yml
dart-sdk/: .gitignore  .pubignore  CHANGELOG.md  build.dart  flutter_rust_bridge.yaml  package.json  postversion.sh  pubspec.yaml  simple_build.dart
dart-sdk/hook/: build.dart
dart-sdk/lib/: eppo_sdk.dart
dart-sdk/lib/src/: attributes.dart  client.dart  logger.dart  subject.dart
dart-sdk/lib/src/rust/: api.dart  frb_generated.dart  frb_generated.io.dart
dart-sdk/lib/src/rust/api/: attributes.dart  client.dart
dart-sdk/rust/: Cargo.toml  Cross.toml  build-android-aarch64.sh  build-android-x86_64.sh  build.rs  flutter_rust_bridge.yaml
dart-sdk/rust/src/: lib.rs  runtime.rs
dart-sdk/rust/src/api/: attributes.rs  client.rs  mod.rs
dart-sdk/test/: dart_web_test_entrypoint.dart  minimal_test.dart  sdk_test_data_bandits_test.dart  sdk_test_data_flags_test.dart
elixir-sdk/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  mix.exs  package.json  postversion.sh
elixir-sdk/.cargo/: config.toml.template
elixir-sdk/lib/: assignment_logger.ex  client.ex  core.ex  sdk_core.ex  server.ex
elixir-sdk/native/sdk_core/: Cargo.toml  README.md
elixir-sdk/native/sdk_core/.cargo/: config.toml.template
elixir-sdk/native/sdk_core/src/: assignment.rs  config.rs  conversion.rs  lib.rs
elixir-sdk/test/: sdk_core_test.exs  test_helper.exs
elixir-sdk/test/client/: client_test.exs  client_ufc_details_test.exs  client_ufc_test.exs  client_wait_test.exs
eppo_core/: CHANGELOG.md  Cargo.toml  package.json  postversion.sh
eppo_core/benches/: bandit_evaluation.rs
eppo_core/src/: attributes.rs  configuration_fetcher.rs  configuration_poller.rs  events.rs  lib.rs  precomputed.rs  sdk_key.rs
eppo_core/src/attributes/: context_attributes.rs
eppo_core/src/background/: runtime.rs  thread.rs
eppo_core/src/eval/: eval_bandits.rs  eval_details.rs  eval_precomputed.rs
eppo_core/src/event_ingestion/: auto_flusher.rs  batched_message.rs  batcher.rs  context.rs  delivery.rs  event.rs  event_delivery.rs  event_dispatcher.rs  event_ingestion.rs  mod.rs  queued_event.rs  retry.rs  sdk_key_decoder.rs  vec_event_queue.rs
eppo_core/src/events/: batch_event_queue.rs  event.rs  event_delivery.rs  event_dispatcher.rs  queued_event.rs  vec_event_queue.rs
eppo_core/src/ufc/: assignment.rs  models.rs
mock-server/: package.json
python-sdk/: CHANGELOG.md  Cargo.toml  package.json  postversion.sh  pyproject.toml
python-sdk/src/: client.rs
ruby-sdk/: CHANGELOG.md  Gemfile  README.md  eppo-server-sdk.gemspec  package.json  postversion.sh
ruby-sdk/ext/eppo_client/: Cargo.toml
ruby-sdk/ext/eppo_client/src/: client.rs  configuration.rs  lib.rs
ruby-sdk/lib/: eppo_client.rb
ruby-sdk/lib/eppo_client/: client.rb  config.rb  version.rb
ruby-sdk/spec/: eppo_client_spec.rb  spec_helper.rb
rust-sdk/: CHANGELOG.md  Cargo.toml  README.md  package.json  postversion.sh
rust-sdk/examples/assignment_details/: main.rs
rust-sdk/examples/simple/: main.rs
rust-sdk/src/: client.rs  poller.rs
