[package]
name = "eppo_py"
version = "4.4.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
eppo_core = { version = "=9.3.0", path = "../eppo_core", features = ["pyo3", "ahash"] }
log = "0.4.22"
pyo3 = "0.27.2"
pyo3-log = "0.13.2"
serde-pyobject = "0.8.0"
serde_json = "1.0.125"
