[package]
name = "sdk_core"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "sdk_core"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.36.1", features = ["serde"] }
eppo_core = { version = "=9.1.0", path = "../../../eppo_core", features = ["rustler"] }
serde_json = "1.0.138"
