[package]
name = "sdk_core"
version = "0.2.3"
authors = []
edition = "2021"

[lib]
name = "sdk_core"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.36.1", features = ["serde"] }
eppo_core = { version = "=9.2.0", features = ["rustler"] }
serde_json = "1.0.138"
tokio = { version = "1.44.1", default-features = false, features = ["time"] }
log = "0.4.21"
