[package]
name = "eppo_client"
# TODO: this version and lib/eppo_client/version.rb should be in sync
version = "3.7.2"
edition = "2021"
license = "MIT"
publish = false
rust-version = "1.80.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
env_logger = { version = "0.11.3", features = ["unstable-kv"] }
eppo_core = { version = "=9.2.0", features = ["magnus", "event_ingestion"] }
log = { version = "0.4.21", features = ["kv_serde"] }
magnus = { version = "0.7.1" }
serde = { version = "1.0.203", features = ["derive"] }
serde_magnus = "0.9.0"
rb-sys = "0.9.105"
serde_json = "1.0.128"
tokio = { version = "1.46.1", default-features = false, features = ["time"] }
