[package]
name = "eppo_client"
# TODO: this version and lib/eppo_client/version.rb should be in sync
version = "3.7.4"
edition = "2021"
license = "MIT"
publish = false
rust-version = "1.80.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
env_logger = { version = "0.11.3", features = ["unstable-kv"] }
eppo_core = { version = "=9.3.0", features = ["magnus", "event_ingestion"] }
log = { version = "0.4.21", features = ["kv_serde"] }
magnus = { version = "0.8.2" }
serde = { version = "1.0.203", features = ["derive"] }
serde_magnus = "0.10.0"
rb-sys = "0.9.120"
serde_json = "1.0.128"
tokio = { version = "1.48.0", default-features = false, features = ["time"] }
